# NNExecutor

./: CMakeLists.txt  chk.sh  chk_iv3.sh  chk_mnist.sh  fchksnr  nn_iv3.cgo  nn_mnist.cgo  nnc.cgo  run.sh  run_iv3.sh  run_mnist.sh  tv_iv3  tv_mnist
inc/: kernel.hpp  nnexec.hpp  rcontext.hpp  settings.h  ssg_kernel.h
inc/builtin-kernels/: kernel_cpu_conv.hpp  kernel_nn_concat.hpp  kernel_nn_conv.hpp  kernel_nn_fc.hpp  kernel_nn_input.hpp  kernel_nn_memalloc.hpp  kernel_nn_memfree.hpp  kernel_nn_output.hpp  kernel_nn_pool.hpp  kernel_nn_relu.hpp  kernel_nn_scale.hpp  kernel_nn_softmax.hpp
kernel/: kernel_binary  kernels.cl
src/: OpenCLInfo.cc  kernel.cc  main.cc  nnexec.cc  ssg_kernel.cc
src/builtin-kernels/: kernel_cpu_conv.cc  kernel_cpu_fc.cc  kernel_cpu_pool.cc  kernel_cpu_relu.cc  kernel_nn_concat.cc  kernel_nn_conv.cc  kernel_nn_fc.cc  kernel_nn_input.cc  kernel_nn_memalloc.cc  kernel_nn_memfree.cc  kernel_nn_output.cc  kernel_nn_pool.cc  kernel_nn_relu.cc  kernel_nn_scale.cc  kernel_nn_softmax.cc
src/builtin-kernels/opencl/: kernel_nn_conv.cl  kernel_nn_pool.cl
src/fbs/: instPacket.fbs
src/idl/: instPacket.fbs
